# Project_OPP

./: pyproject.toml
src/: category_14_2.py  product_14_2.py  read_from_file_product.py
tests/: conftest.py  test_category.py  test_read_from_file_product.py
