[tool.poetry]
name = "pythonproject-opp"
version = "0.1.0"
description = ""
authors = ["Ирина Кривошея <ma_irin@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''(/(\.git)/)'''          # в корне проекта

[tool.isort]
# Максимальная длина строки
line_length=119

[tool.mypy]
# Максимальная длина строки
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'

